Archive2/b9/5e548aa9edd6f1/output
main.cpp:24:24: error: expected ';' at end of declaration list
    ~Vector_container() }{}
                       ^
                       ;
main.cpp:24:26: error: expected ';' after class
    ~Vector_container() }{}
                         ^
                         ;
main.cpp:24:26: error: expected unqualified-id
main.cpp:25:13: error: overloaded 'operator[]' must have at least one parameter of class or enumeration type
    double& operator[](int i) { return v[i]; }
            ^
main.cpp:25:40: error: use of undeclared identifier 'v'
    double& operator[](int i) { return v[i]; }
                                       ^
main.cpp:26:16: error: non-member function cannot have 'const' qualifier
    int size() const {return v.size(); }
               ^~~~~~
main.cpp:26:30: error: use of undeclared identifier 'v'
    int size() const {return v.size(); }
                             ^
main.cpp:27:1: error: extraneous closing brace ('}')
};
^
8 errors generated.
